# Asistente_Outfit_3erParcialTopicosAI

./: .gitignore  Prompt.md  README.md  SETUP_GUIDE.md  agent.py  api.py  database.py  outfit_assistant.db  pyproject.toml  start.sh  tools.py
static/css/: styles.css
static/js/: app.js
templates/: index.html  outfits.html  upload.html  wardrobe.html
