[project]
name = "outfit-assistant-ai"
version = "0.1.0"
description = "AI-powered outfit recommendation assistant using OpenAI and DSPy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy>=3.0.3",
    "fastapi[standard]>=0.120.0",
    "python-multipart>=0.0.20",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "requests>=2.32.5",
]
